# coi-utils

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  build_docs.sh  conftest.py  mypy.ini  pyproject.toml  run_linters.sh  setup.cfg
docs/: api.md  changelog.md  changelog.rst  conf.py  guide.md  index.md  index.rst
docs/_ext/: extra_directives.py  fix_napoleon_attributes_type.py  fix_xrefs.py  fixsig.py  mock_java_packages.py  replace_modname.py
docs/_static/: pydoctheme.css
docs/_templates/: layout.html
docs/api/: gym_utils.md  gym_utils.rst  index.md  index.rst  japc_utils.md  japc_utils.rst  lsa_utils.md  lsa_utils.rst  mpl_utils.md  mpl_utils.rst
docs/guide/: gym_utils.md  gym_utils.rst  index.md  index.rst  install.md  install.rst  iter_mpl_figures.md  iter_mpl_figures.rst  japc_utils.md  japc_utils.rst  lsa_utils.md  lsa_utils.rst  mpl_utils.rst  renderer.md  renderer.png.license  renderer.rst
src/cernml/gym_utils/: __init__.py
src/cernml/japc_utils/: __init__.py
src/cernml/lsa_utils/: __init__.py  _hooks.py  _impl.py  _incorporator.py  _services.py  _utils.py
src/cernml/mpl_utils/: __init__.py  _iter.py  _renderer.py  _strategies.py
tests/: test_gym_utils.py  test_japc_utils.py  test_lsa_utils.py  test_mpl_utils.py
