# SPDX-FileCopyrightText: 2020-2023 CERN
# SPDX-FileCopyrightText: 2023 GSI Helmholtzzentrum für Schwerionenforschung
# SPDX-FileNotice: All rights not expressly granted are reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later OR EUPL-1.2+

[build-system]
requires = [
    'pip >= 22',
    'setuptools >= 45',
    'setuptools-scm[toml] ~= 7.0',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'cernml-coi-utils'
authors = [
    {name = 'Nico Madysa', email = 'nico.madysa@cern.ch'},
]
description = 'Utilities for the Common Optimization Interfaces'
readme = 'README.md'
license = {file='COPYING'}
dependencies = [
    'cernml-coi >=0.7, <0.9',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Physics',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
]

[project.urls]
gitlab = 'https://gitlab.cern.ch/geoff/cernml-coi-utils/'
docs = 'https://acc-py.web.cern.ch/gitlab/geoff/cernml-coi-utils/'
wiki = 'https://wikis.cern.ch/pages/viewpage.action?pageId=194741479'

[project.optional-dependencies]
matplotlib = [
    'matplotlib ~= 3.0',
]
pyjapc = [
    'pyjapc ~= 2.2',
]
pjlsa = [
    'pjlsa ~= 0.2.0',
]
all = [
    'cernml-coi-utils[matplotlib,pjlsa,pyjapc]',
]
doc-only = [
    'importlib-metadata',
    'sphinx',
    'myst-parser',
]
doc = [
    'cernml-coi-utils[all,doc-only]',
]
test = [
    'cernml-coi-utils[all]',
    'cernml-coi ~= 0.8',
    'pytest',
    'pytest-cov',
]
lint = [
    'cernml-coi-utils[test]',
    'black',
    'flake8',
    # Flake8 6.0 doesn't support Python 3.7, so we need to downgrade.
    # 4.0 and 5.0 have a `importlib-metadata` requirement that conflicts with
    # gym 0.21.
    'flake8 < 4; python_version < "3.8"',
    'flake8-length',
    'mypy ~= 1.0',
    'pylint ~= 2.17.0',
    'reuse',
]

[tool.setuptools]
zip-safe = true
package-data = {'*' = ['py.typed']}

[tool.setuptools_scm]

[tool.black]
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
addopts = '--doctest-modules --doctest-glob=*.rst --ignore=src/cernml/lsa_utils/'
testpaths = ['tests', 'src', 'docs/guide']

[tool.pylint.format]
ignore-long-lines = '<?https?://\S+>?$'

[tool.pylint.reports]
reports = false
score = false

[tool.pylint.'messages control']
disable = [
    'not-an-iterable',
    'similarities',
    'unpacking-non-sequence',
    'unsubscriptable-object',
]

[tool.pylint.MAIN]
# Ignore Java packages imported via JPype as if they really existed.
ignored-modules = ['java', 'cern']

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'

[[tool.mypy.overrides]]
module = ['scipy.*', 'gym.*', 'matplotlib.*', 'pyjapc.*', 'cern.*', 'java.*']
ignore_missing_imports = true
