[metadata]
name = cernml-coi-utils
url = https://gitlab.cern.ch/be-op-optimization/cerml-coi-utils
author = Nico Madysa
author_email = nico.madysa@cern.ch
description = Utilities for the Common Optimization Interfaces
long_description = file: README.md
long_description_content_type = text/markdown
license = Other/Proprietary License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    cernml-coi >= 0.7
zip_safe = True

[options.package_data]
* = py.typed

[options.packages.find]
include = cernml.*
where = src

[options.extras_require]
matplotlib =
    matplotlib ~= 3.0
pyjapc =
    pyjapc ~= 2.2
pjlsa =
    pjlsa ~= 0.2.0
# See https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# for information on the %(interpolation)s syntax.
all =
    %(matplotlib)s
    %(pyjapc)s
doc =
    %(all)s
    importlib-metadata
    sphinx
    myst-parser
test =
    %(all)s
    pytest
    pytest-cov
lint =
    %(test)s
    black == 21.5b0
    mypy == 0.812
    pycodestyle == 2.6.0
    pylint == 2.8.2

[pycodestyle]
max-doc-length = 72
max-line-length = 88
